Add another blog post

--- a/public/blog/post_14072024_01.md
+++ b/public/blog/post_14072024_01.md
@@ -1,7 +1,53 @@
 # When confused?!
 
-## It all started with a comment
+### It all started with a comment
 
 A few weeks back, I came across a very confusing comment in one of the projects I have been working on. Here’s the modified screenshot (and the code is [here](https://github.com/cmxiv/kotlin-playground/blob/polymorphic-serialization/src/main/kotlin/Main.kt)) (All the classes have their names changed to protect their privacy 😛)
 
-![](/blog/image/creating_random_vehicle.png "Creating Random Vehicle")
+![](/blog/image/14072024/01/creating_random_vehicle.png "Creating Random Vehicle")
+
+The comment mentions that the casting is required for the code to work properly, however, IDEA is quite confident that we can remove it. Everything also works fine after we take the suggestion from IDEA to remove this casting.
+
+What's going on here? Why did we need this casting (thus the comment)? Let’s (git) blame and see the diff!
+
+![](/blog/image/14072024/01/the_mystifying_comment.png "The Mystifying Comment")
+
+Let's see the output from [the code on the left](https://github.com/cmxiv/kotlin-playground/blob/d9c04b2b7736c78fbc2e0461f2e62d76af3270ef/src/main/kotlin/Main.kt) and compare that to the output from [the code on the right](https://github.com/cmxiv/kotlin-playground/blob/bb88f462624e76aa1790548a218133f6a9441175/src/main/kotlin/Main.kt).
+
+![](/blog/image/14072024/01/output_left_no_types.png "Output left: no type(s)!")
+
+![](/blog/image/14072024/01/output_right_yay_types.png "Output right: Yay, type(s)!")
+
+### Things gets interesting
+
+Those were interesting outputs, the polymorphic serialization works for **_engine_** but not for **_vehicle_**. Let's read the documentation for **_Json.encodeToString_** to dig a bit deeper.
+
+![](/blog/image/14072024/01/documentation.png "Documentation")
+
+So, the type of the passed value is being used to determine the serializer, that means **_when_** is doing some magic with the resulting types. Let's see what the documentation for **_when_** has to say about it.
+
+Nothing! There's noting in [the documentation](https://kotlinlang.org/docs/control-flow.html#when-expression) about how **_when_** decides the returning type (at the time of writing this article). Let's go to the [Kotlin language specification](https://kotlinlang.org/spec/expressions.html#when-expressions) for it.
+
+> The type of the resulting when expression is the [least upper bound](https://kotlinlang.org/spec/type-system.html#least-upper-bound) of the types of all its entries. If when expression is not exhaustive, it has type kotlin.Unit and may be used only as a statement.
+
+Now the left output makes sense, the **_engine_**'s when expression is resolving its return type to **_Engine_** sealed class however the **_vehicle_**'s when expression is resolving its return type to **_Bike_** class NOT to **_Vehicle_** sealed class. (We can also verify it by enabling the 'Local variable types' inlay hints, see screenshots below)
+
+![](/blog/image/14072024/01/enabling_local_variable_types.png "Enabling local variable types")
+
+![](/blog/image/14072024/01/type_engine.png "Type: Engine")
+
+![](/blog/image/14072024/01/type_bike.png "Type: Bike")
+
+Based on these resultant return types, the **_Json.encodeToString_** function is resolving the relevant serializers, the **_Engine.serializer()_** and the **_Bike.serializer()_** respectively. Thereby giving us the output where the polymorphic **_Engine.serializer()_** adds types to the various engines but the **_Bike.serializer()_** doesn't.
+
+Going back to the comment from where we started this investigation, the casting worked as the type was being derived from passed value type which was forced to be **_Vehicle_** sealed class. Also, the suggestion from IDEA makes sense as we introduced a new branch of **_CAR_** vehicle type, the resultant type for **_vehicle_**'s when expression changed to **_Vehicle_** sealed class, thereby using the intended polymorphic **_Vehicle.serializer()_**.
+
+![](/blog/image/14072024/01/type_vehicle.png "Type: Vehicle")
+
+### Summary
+**_when_** expressions decide what to return by the least upper bound of types of all the entries. We should be mindful of this fact when introducing branches/entries in the existing **_when_** expression.
+
+Instead of casting using **_as_** we could also have achieved the same results:
+1. By defining the type explicitly eg. **val vehicle: Vehicle = when (vehicleType) { ... }** 
+2. By passing the intended serializer along with the value to be serialized eg. **Json.encodeToString(Vehicle.serializer(), vehicle)**
+3. By passing the type to derive the serializer eg. **Json.encodeToString<Vehicle>(vehicle)**
